testsuite/tests/indexed-types/should_fail/T15740.stderr

T15740.hs:11:20: error:
    • Expected kind ‘forall k. k -> *’,
        but ‘SBool’ has kind ‘Bool -> *’
    • In the type ‘SBool’
      In the type instance declaration for ‘F2’

T15740.hs:12:20: error:
    • Expected kind ‘forall k. k -> *’, but ‘SNat’ has kind ‘Nat -> *’
    • In the type ‘SNat’
      In the type instance declaration for ‘F2’
